tests/baselines/reference/mergedInterfacesWithInheritedPrivates.errors.txt
==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithInheritedPrivates.ts (3 errors) ====
    class C {
        private x: number;
    }
    
    interface A extends C {
        y: string;
    }
    
    interface A {
        z: string;
    }
    
    class D implements A { // error
          ~
!!! error TS2421: Class 'D' incorrectly implements interface 'A':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        private x: number;
        y: string;
        z: string;
    }
    
    class E implements A { // error
          ~
!!! error TS2421: Class 'E' incorrectly implements interface 'A':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        x: number;
        y: string;
        z: string;
    }
    
    var a: A;
    var r = a.x; // error
            ~~~
!!! error TS2341: Property 'C.x' is inaccessible.